<resources>
    <string name="app_name">Kalkulator</string>
    <string name="kalkulator_sederhana">Kalkulator Sederhana</string>
    <string name="masukkan_bilangan_pertama">Masukkan bilangan pertama</string>
    <string name="masukkan_bilangan_kedua">Masukkan Bilangan kedua</string>
    <string name="hitung">Hitung</string>
    <string name="aplikasi_penjumlahan">Aplikasi Penjumlahan</string>
    <string name="move_to_penjumlahan">Move to Penjumlahan</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="kalkulator_pengurangan">Kalkulator Pengurangan</string>
    <string name="kalkulator_penjumlahan">Kalkulator Penjumlahan</string>
    <string name="kalkulator_perkalian">Kalkulator Perkalian</string>
    <string name="penjumlahan">Penjumlahan</string>
    <string name="kalkulator_pembagian">Kalkulator Pembagian</string>
    <string name="pengurangan">Pengurangan</string>
    <string name="perkalian">Perkalian</string>
    <string name="pembagian">Pembagian</string>
    <string name="kembali_ke_home">Kembali ke Home</string>
</resources>