<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/main_dims"
    tools:context=".PenjumlahanActivity">

    <TextView
        android:text="@string/aplikasi_penjumlahan"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/tiga"
        android:hint="@string/masukkan_bilangan_pertama"
        android:inputType="number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/empat"
        android:hint="@string/masukkan_bilangan_kedua"
        android:inputType="number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="Autofill" />

    <Button
        android:id="@+id/btnJumlah"
        android:text="@string/hitung"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</LinearLayout>